--- a/PetFlickerWithStoryBoard/Base.lproj/Main.storyboard
+++ b/PetFlickerWithStoryBoard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="FrA-qK-5vB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="FrA-qK-5vB">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -13,28 +13,12 @@
                     </navigationBar>
                     <connections>
                         <segue destination="xDA-1D-51X" kind="push" id="J4g-iI-jVl"/>
-                        <segue destination="2C2-bh-yD6" kind="relationship" relationship="rootViewController" id="FS5-Oi-Xm8"/>
+                        <segue destination="hM8-B0-ioM" kind="relationship" relationship="rootViewController" id="OD5-G4-01V"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xCY-S0-h3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-461" y="-669"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="0wr-G7-0Ye">
-            <objects>
-                <navigationController definesPresentationContext="YES" id="2C2-bh-yD6" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="9Ug-eQ-ieK"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NRH-uA-8xU">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="hM8-B0-ioM" kind="relationship" relationship="rootViewController" id="vnC-uT-24D"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MMr-Ja-K1r" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-246" y="-1887"/>
         </scene>
         <!--Example View Controller Collection View In Table View - Hello-->
         <scene sceneID="oqv-Qj-Tv4">
@@ -127,6 +111,7 @@
                                         <connections>
                                             <outlet property="backView" destination="Rue-Vt-Kpp" id="wwP-Yz-mbQ"/>
                                             <outlet property="collectionView" destination="7ne-ig-hbw" id="idj-y1-F5G"/>
+                                            <segue destination="fEe-Hj-u4K" kind="push" identifier="MainToNewStory" id="av3-ET-LJa"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -147,31 +132,11 @@
                     <connections>
                         <outlet property="backGroundImageView" destination="JpY-ik-2g1" id="Scb-d0-HDU"/>
                         <outlet property="tableView" destination="yEZ-GI-hyB" id="CMQ-4F-Dex"/>
-                        <segue destination="dmy-jM-HOo" kind="push" identifier="MainToNewStory" id="sIW-Uk-a24"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="362-J7-aFh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="317" y="-1103"/>
-        </scene>
-        <!--Write New Story View Controller - hello-->
-        <scene sceneID="JFI-x1-tr3">
-            <objects>
-                <viewController id="dmy-jM-HOo" customClass="WriteNewStoryViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="x3S-lg-9Gh"/>
-                        <viewControllerLayoutGuide type="bottom" id="PpZ-6s-xX1"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8y1-zA-VBM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="hello" id="CYJ-7h-5GJ"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HH8-Kp-OYE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="848" y="-913"/>
+            <point key="canvasLocation" x="503" y="-1145"/>
         </scene>
         <!--Write New Story View Controller - Title-->
         <scene sceneID="2GX-IY-pTx">
@@ -188,7 +153,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="04s-fU-f7X">
                                 <rect key="frame" x="7" y="74" width="307" height="72"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -221,7 +186,7 @@
                                 <color key="backgroundColor" red="0.86421795280000002" green="0.86421795280000002" blue="0.86421795280000002" alpha="0.35999999999999999" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                         <accessibility key="accessibilityConfiguration">
                             <accessibilityTraits key="traits" none="YES" button="YES"/>
                         </accessibility>
@@ -247,7 +212,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fFk-HJ-iag" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1214" y="-1177"/>
+            <point key="canvasLocation" x="1164" y="-1145"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pC0-pC-dUc">
