--- a/PetFlickerWithStoryBoard/Base.lproj/Main.storyboard
+++ b/PetFlickerWithStoryBoard/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" id="Rue-Vt-Kpp">
-                                                    <rect key="frame" x="10" y="1" width="300" height="353"/>
+                                                    <rect key="frame" x="10" y="1" width="333" height="354"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sA3-Mw-l8e">
@@ -138,6 +138,7 @@
                     <connections>
                         <outlet property="backGroundImageView" destination="JpY-ik-2g1" id="Scb-d0-HDU"/>
                         <outlet property="tableView" destination="yEZ-GI-hyB" id="CMQ-4F-Dex"/>
+                        <segue destination="fUn-c7-GAH" kind="push" identifier="MainToCommentsView" id="OBb-Lf-as5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="362-J7-aFh" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -214,7 +215,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fFk-HJ-iag" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1164" y="-1145"/>
+            <point key="canvasLocation" x="1686" y="-1277"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pC0-pC-dUc">
@@ -404,6 +405,53 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E53-K3-oHe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="112" y="-233"/>
+        </scene>
+        <!--View Comments View Controller - Title-->
+        <scene sceneID="2Kc-9W-jgF">
+            <objects>
+                <viewController storyboardIdentifier="ViewCommentsView" autoresizesArchivedViewToFullSize="NO" id="fUn-c7-GAH" customClass="ViewCommentsViewController" sceneMemberID="viewController">
+                    <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="I0I-eX-b6o">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="goT-fZ-hw5">
+                                <rect key="frame" x="7" y="74" width="307" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="2uX-Lp-wOe">
+                                <rect key="frame" x="1" y="63" width="319" height="504"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="fUn-c7-GAH" id="JEk-YO-hAz"/>
+                                    <outlet property="delegate" destination="fUn-c7-GAH" id="WcM-hn-x17"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <accessibilityTraits key="traits" none="YES" button="YES"/>
+                        </accessibility>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="EFu-zh-Sok">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="Wfa-VC-YNB">
+                            <connections>
+                                <action selector="back:" destination="fUn-c7-GAH" id="LEo-bl-nE6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="CommentTableView" destination="2uX-Lp-wOe" id="gND-uK-dwk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bFV-kI-qlH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1322" y="-621"/>
         </scene>
     </scenes>
     <resources>
